RESOLVED FIXED209412
AudioMediaStreamTrackRendererCocoa does not recover from AudioSession interruption
https://bugs.webkit.org/show_bug.cgi?id=209412
Summary AudioMediaStreamTrackRendererCocoa does not recover from AudioSession interru...
youenn fablet
Reported 2020-03-23 00:59:22 PDT
AudioMediaStreamTrackRendererCocoa does not recover from AudioSession interruption
Attachments
Patch (1.84 KB, patch)
2020-03-23 01:08 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2020-03-23 01:08:02 PDT
EWS
Comment 2 2020-03-23 07:33:48 PDT
Committed r258839: <https://trac.webkit.org/changeset/258839> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394243 [details].
Radar WebKit Bug Importer
Comment 3 2020-03-23 07:34:15 PDT
sventy
Comment 4 2020-04-14 14:04:26 PDT
Any idea in which iOS version this fix will land?
sventy
Comment 5 2020-04-20 23:44:01 PDT
I have just tested on iOS 13.4.5 beta, I am still able to reproduce one-way audio after interruption by incoming phone call, so I assume that means this fix has not landed yet in that version. I can reproduce this problem consistently so let me know if there is anything you'd like me to test.
Note You need to log in before you can comment on or make changes to this bug.